adding css & js files to my page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>my favorite player for all time is zidane </p>
 <p>don't forget my lovely meal .. the greatest the mighty the MANSAF !  </p>
     </main>
-
+    <script src="js/app.js"></script>
 </body>
 
 </html>
