--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body style="background-image:url('img/abc.jpg');">
     <header>
         <h1>This is me !</h1>
-        <ul>
+        <ul class="linkes">
             <li>
                 <a href="https://www.facebook.com/eiadswaidat5">facebook</a>
             </li>
@@ -29,13 +29,29 @@
     </header>
     <main>
 <p>let me introduce myself for you.</p>
-<p>My name is eiad nimer alswaidat, i'm 28 years old</p>
-<p>i studied civil engineer at alquds college </p>
-<p>i worked at UAE as a quality engineer for 2 years</p>
-<p>also -as you know- i support real madrid so i'm a madridista</p>
-<p>my favorite player for all time is zidane </p>
-<p>don't forget my lovely meal .. the greatest the mighty the MANSAF !  </p>
+<ul>
+    <li>My name is eiad nimer alswaidat, i'm 28 years old</li>
+    <li>i studied civil engineer at alquds college</li>
+    <li>i worked at UAE as a quality engineer for 2 years</li>
+    <li>also -as you know- i support real madrid so i'm a madridista</li>
+    <li>my favorite player for all time is zidane</li>
+    <li>don't forget my lovely meal .. the greatest the mighty the MANSAF !</li>
+</ul>
     </main>
+        <ol class="top10">
+            <p>This is my best 10 players of all time</p>
+            <li>1-Zidane</li>
+            <li>2-CR7</li>
+            <li>3-Messi</li>
+            <li>4-Beckham</li>
+            <li>5-Ramos</li>
+            <li>6-Henry</li>
+            <li>7-Marcelo</li>
+            <li>8-Pogba</li>
+            <li>9-Kroos</li>
+            <li>10-Bergkamp</li>
+        </ol>   
+    
     <script src="js/app.js"></script>
 </body>
 
