--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li>9-Kroos</li>
             <li>10-Bergkamp</li>
         </ol>   
+        <button onclick="guessmyNum()">start</button>
     
     <script src="js/app.js"></script>
 </body>
