update css file

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>It's me</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body style="background-image:url('img/abc.jpg');">
     <header>
-        <h1>This is me !</h1>
+        <h1 style="font-size: 50px;">This is me !</h1>
         <ul class="linkes">
             <li>
                 <a href="https://www.facebook.com/eiadswaidat5">facebook</a>
@@ -28,14 +28,18 @@
         </ul>
     </header>
     <main>
-<p>let me introduce myself for you.</p>
+<h1 style="font-size: 50px;">let me introduce myself for you.</h1>
 <ul>
     <li>My name is eiad nimer alswaidat, i'm 28 years old</li>
     <li>i studied civil engineer at alquds college</li>
+    <img width="120px"src="/img/alquds college.webp" alt="">
     <li>i worked at UAE as a quality engineer for 2 years</li>
     <li>also -as you know- i support real madrid so i'm a madridista</li>
+    <img width="120" src="/img/real madrid logo.png" alt="">
     <li>my favorite player for all time is zidane</li>
+    <img width="150" src="/img/zidane.webp" alt="">
     <li>don't forget my lovely meal .. the greatest the mighty the MANSAF !</li>
+    <img width="150" src="/img/the mansaf.jpg" alt="">
 </ul>
     </main>
         <ol class="top10">
@@ -53,7 +57,7 @@
         </ol>   
         <button onclick="guessmyNum()">start</button>
     
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
