--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ol>   
         <button onclick="guessmyNum()">start</button>
     
-    <!-- <script src="js/app.js"></script> -->
+    <script src="js/app.js"></script>
 </body>
 
 </html>
